excusas arregladas gramaticalmente y colores definitivos

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
-    background-color: #ff5c5c;
+    background-color: #658361;
 }
 h1 {
     font-family: 'Bungee Shade', cursive;
-    color: #ff5c5c
+    color: #d0dd97
 }
 p {
     font-family: 'Montserrat', sans-serif;
